# iot_llm_react

iot/: weather_monitoring_iot.ino
langsmith_export/: export_ls.py  pyproject.toml
randomforest/: pyproject.toml  training_models_rf.py
react/: iot.py  main.py  pyproject.toml  react.py
